data/test/type_check/fail/issue_20a.v
wire x[3:0];
// Array reference out of bounds
assign x[5] = 1;
